objects/Activity.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spoke With</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Email Sent</fullName>
                </value>
                <value>
                    <fullName>Email Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Client Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Sales Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Client Didn&apos;t Pick Up / Show Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Related_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Related to</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Status_if_related__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Status (if related)</label>
        <referenceTo>Job_Status__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>